# easy2oracle

./: CMakeLists.txt  INSTALL.md  README.md  VERSION
Documentation/: eto-comparison.html  eto-faq.html  eto-features-futures.html  eto-index.html  eto-licenses.html  eto-links.html  eto-requirements.html  eto-screenshots.html  eto-technical-overview.html  eto-usage.html
Documentation/css/: style.css
ETO_Common/: LICENSE INIPARSER
ETO_Common/include/: dictionary.h  eto_dbs.h  eto_log.h  eto_util.h
ETO_Common/src/: dictionary.c  eto_log.c  eto_main.c  eto_util.c  iniparser.c
EasyATOra/: README.md
EasyMTOra/: CMakeLists.txt  INSTALL.md  MySQL_testfile.ini
EasyMTOra/src/: eto_dbs.c
EasyNTOra/: CMakeLists.txt  INSTALL.md  Oracle_testfile.ini  README.md
EasyNTOra/src/: eto_dbs.c
EasyOTOra/: README.md
EasyPTOra/: CMakeLists.txt  INSTALL.md  Presto_testfile.ini
EasyPTOra/prestoclient/: prestoclientcurl.c  prestoclientjsonstream.c
EasyPTOra/src/: eto_dbs.c
EasySTOra/: CMakeLists.txt  INSTALL.md  SQLite_testfile.ini  eto_testfile.db3
EasySTOra/include/: sqlite3.h
EasySTOra/src/: eto_dbs.c
EasyTTOra/: CMakeLists.txt  INSTALL.md  SQLServer_testfile.ini
EasyTTOra/freetds/include/: config.h  tds_sysdep_public.h
EasyTTOra/freetds/src/tds/: ptw32_MCS_lock.c
EasyTTOra/src/: eto_dbs.c
PLSQL/: INSTALL.md  install_utl_eto.sql
cmake/Modules/: FindCURL.cmake  FindFreeTDS.cmake  FindMySQL.cmake
msvc/: Easy-To-Oracle.sln
msvc/EasyMTOra/: EasyMTOra.vcxproj  EasyMTOra.vcxproj.filters
msvc/EasyNTOra/: EasyNTOra.vcxproj  EasyNTOra.vcxproj.filters
msvc/EasyPTOra/: EasyPTOra.vcxproj  EasyPTOra.vcxproj.filters
msvc/EasySTOra/: EasySTOra.vcxproj  EasySTOra.vcxproj.filters
msvc/EasyTTOra/: EasyTTOra.vcxproj  EasyTTOra.vcxproj.filters
